--- a/main.ipynb
+++ b/main.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-25T06:27:18.574190Z",
-     "start_time": "2024-08-25T06:27:18.568867Z"
+     "end_time": "2024-08-26T14:26:06.513804Z",
+     "start_time": "2024-08-26T14:26:06.393352Z"
     }
    },
    "outputs": [],
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-25T06:28:53.687495Z",
-     "start_time": "2024-08-25T06:28:52.865549Z"
+     "end_time": "2024-08-26T14:26:07.423109Z",
+     "start_time": "2024-08-26T14:26:06.514758Z"
     }
    },
    "outputs": [],
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-25T06:28:54.833960Z",
-     "start_time": "2024-08-25T06:28:54.790917Z"
+     "end_time": "2024-08-26T14:26:07.495360Z",
+     "start_time": "2024-08-26T14:26:07.425050Z"
     }
    },
    "outputs": [
@@ -573,16 +573,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<div id=\"main-book-content\">\n<script>var branch_id, enterAtMin3Characters=\"حداقل سه حرف وارد کنید\";</script>\n<div class=\"pd9 part-search fl\">\n<input type=\"text\"/>\n<span class=\"disn\">\nجستجو در: \n<select id=\"bid4search\"><option>کل کتب\n<option value=\"26575\">توضیح المسائل جامع جلد (1)\n<option value=\"26576\">توضیح المسائل جامع جلد (2)\n<option value=\"26577\">توضیح المسائل جامع جلد (3)\n<option value=\"26578\">توضیح المسائل جامع جلد (4)\n<option value=\"50\">توضیح المسائل\n<option value=\"25938\">خلاصه ای از احکام عبادات\n<option value=\"53\">فقه برای غرب نشینان\n<option value=\"25936\">آموزش احکام بانوان به زبان ساده (حیض - استحاضه - نفاس - غسل - تیمم)\n<option value=\"51\">مناسک حج\n<option value=\"52\">ملحقات مناسک حج\n</option></option></option></option></option></option></option></option></option></option></option></select> \n</span>\n <button>جستجو</button>\n</div>\n<div class=\"clr pd9\"></div>\n<a class=\"fl\" href=\"/persian/book/26575/6849/\">شرایط شکسته شدن نماز مسافر / شرط اوّل: سفر او کمتر از هشت فرسخ شرعى نباشد ←</a>\n<a class=\"fr\" href=\"/persian/book/26575/6847/\">→ قضای سجده و تشهّد فراموش شده</a>\n<div class=\"clr pd9\"></div>\n<h1 class=\"c\">نماز مسافر</h1>\n<div class=\"baz book-text\">«مسافر» باید نماز ظهر و عصر و عشاء را با نه شرط، شکسته به‌جا آورد، یعنى دو رکعت بخواند. </div>\n<div class=\"baz book-footnote\"></div>\n<div class=\"clr pd9\"></div>\n<a class=\"fl\" href=\"/persian/book/26575/6849/\">شرایط شکسته شدن نماز مسافر / شرط اوّل: سفر او کمتر از هشت فرسخ شرعى نباشد ←</a>\n<a class=\"fr\" href=\"/persian/book/26575/6847/\">→ قضای سجده و تشهّد فراموش شده</a>\n<div class=\"clr pd9\"></div>\n<div class=\"socialShare\" style=\"text-align:center\"></div>\n</div>"
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "soup2 = BeautifulSoup(requests.get(\"https://www.sistani.org/persian/book/26575/6848/\").content.decode(\"UTF-8\"), \"html.parser\")\n",
     "main_book_content: Tag = soup2.find(id=\"main-book-content\") "
@@ -590,11 +581,35 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-25T06:52:48.564966Z",
-     "start_time": "2024-08-25T06:52:47.905433Z"
+     "end_time": "2024-08-26T14:26:08.058196Z",
+     "start_time": "2024-08-26T14:26:07.497113Z"
     }
    },
-   "execution_count": 98
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'نماز مسافر'"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main_book_content.find(\"h1\").string"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-26T14:26:08.069300Z",
+     "start_time": "2024-08-26T14:26:08.059440Z"
+    }
+   },
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -603,7 +618,7 @@
      "data": {
       "text/plain": "'«مسافر» باید نماز ظهر و عصر و عشاء را با نه شرط، شکسته به\\u200cجا آورد، یعنى دو رکعت بخواند. '"
      },
-     "execution_count": 104,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,11 +629,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-25T06:54:40.670053Z",
-     "start_time": "2024-08-25T06:54:40.662610Z"
+     "end_time": "2024-08-26T14:26:08.085537Z",
+     "start_time": "2024-08-26T14:26:08.072465Z"
     }
    },
-   "execution_count": 104
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -629,11 +644,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-25T06:54:36.629387Z",
-     "start_time": "2024-08-25T06:54:36.625035Z"
+     "end_time": "2024-08-26T14:26:08.096918Z",
+     "start_time": "2024-08-26T14:26:08.088902Z"
     }
    },
-   "execution_count": 103
+   "execution_count": 7
   }
  ],
  "metadata": {
